updating spec
